--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,12 @@
 
     <groupId>br.com.ez.finances</groupId>
     <artifactId>ez-finances</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>ez-finances-api</module>
+        <module>ez-finances-web</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <name>ez-finances</name>
     <description>Spring Boot EZ Finances</description>
@@ -28,12 +32,14 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Module Dependencies -->
             <dependency>
-                <groupId>com.fasterxml.jackson.module</groupId>
-                <artifactId>jackson-module-kotlin</artifactId>
-                <version>${jackson.version}</version>
+                <groupId>br.com.ez.finances</groupId>
+                <artifactId>ez-finances-api</artifactId>
+                <version>${project.version}</version>
             </dependency>
 
+            <!-- Database -->
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
