--- a/ez-finances-web/src/main/resources/application.properties
+++ b/ez-finances-web/src/main/resources/application.properties
@@ -2,12 +2,19 @@
 server.servlet.contextPath=/ezfinances
 server.port=8080
 
-#Database
+#Liquibase
 spring.liquibase.change-log=classpath:db/changelog-master.xml
-spring.datasource.url=jdbc:postgresql://localhost:5432/ez_finances
-spring.datasource.username=ez_finances
-spring.datasource.password=ez_finances
+spring.liquibase.default-schema=ez_schema
+
+#Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/ez_db
+spring.datasource.username=ez_user
+spring.datasource.password=ez_pw
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.pool-name=crm-hikari
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=20
 
 #Spring JPA
 spring.jpa.show-sql=true
@@ -17,3 +24,4 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.synonyms=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.default_schema=ez_schema
