--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
     <properties>
         <liquibase.version>3.6.2</liquibase.version>
+        <mapstruct.version>1.2.0.Final</mapstruct.version>
         <postgresql.version>42.2.3</postgresql.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -55,6 +56,12 @@
                 <version>${project.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>br.com.ez.finances</groupId>
+                <artifactId>ez-finances-domain</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <!-- Database -->
             <dependency>
                 <groupId>org.liquibase</groupId>
@@ -66,6 +73,13 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.version}</version>
+            </dependency>
+
+            <!-- Other dependencies -->
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-jdk8</artifactId>
+                <version>${mapstruct.version}</version>
             </dependency>
 
         </dependencies>
