--- a/ez-finances-web/src/main/resources/application.properties
+++ b/ez-finances-web/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ez_db
 spring.datasource.username=ez_user
 spring.datasource.password=ez_pw
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.source=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.pool-name=crm-hikari
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=20
